--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
@@ -1,7 +1,7 @@
 {% set path = options.link.url|default(path(options.link.route|default(grid.requestConfiguration.getRouteName('delete')), options.link.parameters|default({'id': data.id}))) %}
 
 <form action="{{ path }}" method="post">
-    <button class="btn btn-danger btn-sm t-delete_button" type="submit">
+    <button class="el-button el-button--danger" type="submit">
         {{ (action.label is empty) ? 'nucms.ui.delete'|trans : action.label|trans }}
     </button>
     <input type="hidden" name="_method" value="DELETE">
