--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/index.html.twig
@@ -3,13 +3,18 @@
 {% import '@NugatoNuCms/Admin/Macro/sorting.html.twig' as sorting %}
 {% import '@NugatoNuCms/Admin/Macro/pagination.html.twig' as pagination %}
 
-{% set definition = resources.definition %} {# Grid data (limits, fields, filters) #}
-{% set data = resources.data %}  {# Grid data from passed entity #}
-{% set metadata = metadata %} {# Metadata about grid (name, applicationName, controllers, factory) #}
-{% set vars = configuration.vars %} {# Additional variables passed from yml #}
-{% set grid = resources %} {# grid alias #}
+{% set definition = resources.definition %}
+{# Grid data (limits, fields, filters) #}
+{% set data = resources.data %}
+{# Grid data from passed entity #}
+{% set metadata = metadata %}
+{# Metadata about grid (name, applicationName, controllers, factory) #}
+{% set vars = configuration.vars %}
+{# Additional variables passed from yml #}
+{% set grid = resources %}
+{# grid alias #}
 
-{% set header = configuration.vars.header|default(metadata.applicationName~'.ui.'~metadata.pluralName) %}
+{% set header = configuration.vars.header | default(metadata.applicationName ~ '.ui.' ~ metadata.pluralName) %}
 
 {% block content %}
 
@@ -32,7 +37,7 @@
             </div>
             <div class="col-sm-8">
                 <div class="float-right">
-                    {% if data|length > 0 %}
+                    {% if data | length > 0 %}
                         {# Pagination - top #}
                         {{ pagination.simple(data) }}
                     {% endif %}
@@ -42,48 +47,73 @@
     {% endblock %}
 
     {% block data %}
-        {% if data|length > 0 %}
+        {% if data | length > 0 %}
 
-            <div class="table-responsive">
-                <table class="table table-striped table-hover">
-                    <thead>
-                    <tr>
-                        {# Headers #}
-                        {% for field in definition.fields %}
-                            {% if field.enabled %}
-                                {% if field.isSortable %}
-                                    {{ sorting.tableHeader(grid, field, app.request.attributes) }}
-                                {% else %}
-                                    <th class="table-column-{{ field.name }}">{{ field.label|trans }}</th>
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for row in data %}
-                        <tr>
-                            {# Data #}
-                            {% for field in definition.enabledFields %}
-                                <td>{{ sylius_grid_render_field(grid, field, row) }}</td>
-                            {% endfor %}
+            {# Łopatology serialize :D #}
+            {% set tableFields = [] %}
+            {% for field in data.currentPageResults %}
+                {% set tableFields = tableFields | merge([field]) %}
+            {% endfor %}
 
-                            {# Actions - item #}
-                            {% if definition.actionGroups.item is defined and definition.getEnabledActions('item')|length > 0 %}
-                                <td>
-                                    <div class="btn-group" role="group">
-                                        {% for action in definition.getEnabledActions('item') %}
-                                            {{ sylius_grid_render_action(grid, action, row) }}
+            <nu-table inline-template table-data="{{ tableFields|serialize }}">
+                <div>
+                    <div class="el-table el-table--fit el-table--enable-row-hover el-table--enable-row-transition" style="width: 100%;">
+                        <div class="el-table__header-wrapper">
+                            <table class="el-table__header" cellspacing="0" cellpadding="0" border="0" style="width: 100%;">
+                                <thead class="has-gutter">
+                                    <tr class="">
+                                        <th style="width: 50px;">#</th>
+                                        {% for field in definition.fields %}
+                                            {% if field.enabled %}
+                                                {% if field.isSortable %}
+                                                    {{ sorting.tableHeader(grid, field, app.request.attributes) }}
+                                                {% else %}
+                                                    <th colspan="1" rowspan="1" class="is-leaf table-column-{{ field.name }}">
+                                                        <div class="cell">{{ field.label|trans }}</div>
+                                                    </th>
+                                                {% endif %}
+                                            {% endif %}
                                         {% endfor %}
-                                    </div>
-                                </td>
-                            {% endif %}
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                            </table>
+                        </div>
+                        <div class="el-table__body-wrapper is-scrolling-none">
+                            <table class="el-table__body" cellspacing="0" cellpadding="0" border="0" style="width: 100%;">
+                                <tbody>
+                                    {% for row in data %}
+                                        <tr class="el-table__row">
+                                            <td style="width: 50px;">
+                                                <div class="cell">
+                                                    <el-checkbox v-model="tableDataJSON[{{loop.index0}}].checked"></el-checkbox>
+                                                </div>
+                                            </td>
+                                            {# Data #}
+                                            {% for field in definition.enabledFields %}
+                                                <td>
+                                                    <div class="cell">{{ sylius_grid_render_field(grid, field, row) }}</div>
+                                                </td>
+                                            {% endfor %}
+
+                                            {# Actions - item #}
+                                            {% if definition.actionGroups.item is defined and definition.getEnabledActions('item') | length > 0 %}
+                                                <td style="display: flex;">
+                                                    {% for action in definition.getEnabledActions('item') %}
+                                                        {{ sylius_grid_render_action(grid, action, row) }}
+                                                    {% endfor %}
+                                                </td>
+                                            {% endif %}
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+            </nu-table>
+            <br><br><br><br><br><br><br><br><br><br><br>
 
             <div class="row">
                 <div class="col-sm-4"></div>
