--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Field/file.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Field/file.html.twig
@@ -1,5 +1,5 @@
 {% if data.isImage %}
-    <img src="/upload/{{ data.path }}" style="width: 40px;">
+    <img src="{{ data.path|imagine_filter('xs') }}">
 {% else %}
-    {{ data.path|slice(0, 20) ~ ' ...'}}
+    {{ data.path|slice(0, 20) ~ ' ...' }}
 {% endif %}
