--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/_navbar.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/_navbar.html.twig
@@ -7,6 +7,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+            {{ render(controller('nucms.controller.web.navigation:renderByCode', {'code': 'main_menu'})) }}
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
