--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/delete.html.twig
@@ -1,9 +1,5 @@
+{% import '@NugatoNuCms/Admin/Macro/button.html.twig' as button %}
+
 {% set path = options.link.url|default(path(options.link.route|default(grid.requestConfiguration.getRouteName('delete')), options.link.parameters|default({'id': data.id}))) %}
 
-<form action="{{ path }}" method="post">
-    <button class="btn btn-danger btn-sm t-delete_button" type="submit">
-        {{ (action.label is empty) ? 'nucms.ui.delete'|trans : action.label|trans }}
-    </button>
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token(data.id) }}"/>
-</form>
+{{ button.buttonDelete(path, data, action.label) }}
