--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/update.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Crud/Action/update.html.twig
@@ -1,5 +1,5 @@
+{% import '@NugatoNuCms/Admin/Macro/button.html.twig' as button %}
+
 {% set path = options.link.url|default(path(options.link.route|default(grid.requestConfiguration.getRouteName('update')), options.link.parameters|default({'id': data.id}))) %}
 
-<a href="{{ path }}" class="btn btn-primary btn-sm t-update_button">
-    {{ (action.label is empty) ? 'nucms.ui.edit'|trans : action.label|trans }}
-</a>
+{{ button.buttonUpdate(path, data, action.label) }}
