--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Navigation/Partial/_items.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Admin/Navigation/Partial/_items.html.twig
@@ -1,6 +1,7 @@
 {% import _self as tree %}
 
 {% macro render(items, parent) %}
+    {% import '@NugatoNuCms/Admin/Macro/button.html.twig' as button %}
     {% import _self as tree %}
 
     <ul {% if parent is null %}class="list-group"{% endif %}>
@@ -9,7 +10,9 @@
                 <a href="{{ path('nucms_admin_navigation_item_update', {'id': item.id}) }}">
                     {{ item.name }}
                 </a>
-                <a href="{{ path('nucms_admin_navigation_item_create', {'navigationId': app.request.get('navigationId'), 'parentId': item.id }) }}" class="btn btn-success btn-sm">{{ 'nucms.ui.add'|trans }}</a>
+
+                {{ button.buttonCreate(path('nucms_admin_navigation_item_create', {'navigationId': app.request.get('navigationId'), 'parentId': item.id }), item, 'nucms.ui.add'|trans, 'btn-sm') }}
+                {{ button.buttonDelete(path('nucms_admin_navigation_item_delete', {'navigationId': app.request.get('navigationId'), 'id': item.id}), item, '', 'btn-sm') }}
 
                 {{ tree.render(item.__children, item.id) }}
             </li>
