Add sample homepage

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/base.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/base.html.twig
@@ -20,7 +20,11 @@
 {% block navbar %}
     {% include '@NugatoNuCms/Web/_navbar.html.twig' %}
 {% endblock %}
-{% block content %}
+{% block content_wrapper %}
+    {% block content %}{% endblock %}
+{% endblock %}
+{% block footer %}
+    {% include '@NugatoNuCms/Web/_footer.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
