--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/page.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/page.html.twig
@@ -1,17 +1,15 @@
-{% extends '@NugatoNuCms/Web/base.html.twig' %}
+{% extends '@NugatoNuCms/Web/Layout/containerWidth.html.twig' %}
 
 {% block content %}
 
-    <article>
-        <header class="t-page_title_div">
+    <article class="mt-5">
+        <header class="t-page_title_div mb-3">
             <h1>{{ page.title|capitalize }}</h1>
+            <span class="badge badge-secondary">Created at {{ page.createdAt|date('Y-m-d') }}</span>
         </header>
         <main>
             {{ page.content|raw }}
         </main>
-        <footer>
-            Created at {{ page.createdAt|date('Y-m-d') }}
-        </footer>
     </article>
 
 {% endblock %}
