--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/page.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/page.html.twig
@@ -3,8 +3,8 @@
 {% block content %}
 
     <article class="mt-5">
-        <header class="t-page_title_div mb-3">
-            <h1>{{ page.title|capitalize }}</h1>
+        <header class="mb-3">
+            <h1 class="t-page_title_div">{{ page.title|capitalize }}</h1>
             <span class="badge badge-secondary">Created at {{ page.createdAt|date('Y-m-d') }}</span>
         </header>
         <main>
