--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Navigation/_menu.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Navigation/_menu.html.twig
@@ -32,4 +32,6 @@
 
 <ul class="navbar-nav mr-auto">
     {{ tree.render(navigation_items, null) }}
+
+    <li class="nav-item"><a href="{{ path('nucms_web_contact_form') }}" class="nav-link">{{ 'nucms.web.contact'|trans }}</a></li>
 </ul>
