--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/_footer.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/_footer.html.twig
@@ -1,8 +1,16 @@
 <footer class="text-light p-3 mt-5" style="background-color: #2f275d;">
     <div class="container">
-        <p class="float-right">
-            <a href="#">Back to top</a>
-        </p>
-        &copy; Copyright {{ "now"|date("Y") }}
+
+        <div class="row">
+            <div class="col-sm-6">
+            </div>
+            <div class="col-sm-6">
+                <p class="float-right">
+                    &copy; Copyright {{ "now"|date("Y") }} <br>
+
+                    <a href="#">Back to top</a>
+                </p>
+            </div>
+        </div>
     </div>
 </footer>
