Add options templates for page

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Page/Template/contact.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Page/Template/contact.html.twig
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-    SUPER CONTACT
-
     <article class="mt-5">
         <header class="mb-3">
             <h1 class="t-page_title_div">{{ page.title|capitalize }}</h1>
             <span class="badge badge-secondary">Created at {{ page.createdAt|date('Y-m-d') }}</span>
         </header>
         <main>
+            {{ render(controller('Nugato\\Bundle\\NuCmsBundle\\Controller\\Web\\ContactController:requestForm')) }}
+
             {{ page.content|raw }}
         </main>
     </article>
