Add metatags fields

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/base.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/base.html.twig
@@ -10,6 +10,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     {% block metatags %}
+        <meta name="description" content="{% block meta_description %}{% endblock %}">
     {% endblock %}
 
     {% block stylesheets %}
