--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Page/Template/default.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Page/Template/default.html.twig
@@ -1,5 +1,12 @@
 {% extends '@NugatoNuCms/Web/Layout/containerWidth.html.twig' %}
 
+{% block title %}
+    {{ page.metaTitle is not empty ? page.metaTitle : parent() }}
+{% endblock %}
+{% block meta_description %}
+    {{ page.metaDescription is not empty ? page.metaDescription : parent() }}
+{% endblock %}
+
 {% block content %}
 
     <article class="mt-5">
