--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/posts.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/posts.html.twig
@@ -1,6 +1,10 @@
 {% extends '@NugatoNuCms/Web/Layout/containerWidth.html.twig' %}
 
 {% block content %}
+    <header class="mb-3">
+        <h1 class="t-page_title_div">{{ 'nucms.ui.blog'|trans }}</h1>
+    </header>
+
     <div class="row">
         {% for post in posts %}
             <div class="col-sm-3">
