--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/posts.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/posts.html.twig
@@ -5,6 +5,7 @@
         <h1 class="t-page_title_div">{{ 'nucms.ui.blog'|trans }}</h1>
     </header>
 
+    {% if posts %}
     <div class="row">
         {% for post in posts %}
             <div class="col-sm-3">
@@ -28,4 +29,7 @@
     <div class="mt-5">
         {{ pagerfanta(posts, 'twitter_bootstrap4', options|default({})) }}
     </div>
+    {% else %}
+        <div class="alert alert-info">{{ 'nucms.ui.no_posts'|trans }}</div>
+    {% endif %}
 {% endblock %}
