--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/posts.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/posts.html.twig
@@ -8,17 +8,20 @@
     {% if posts %}
     <div class="row">
         {% for post in posts %}
+            {% set link = path('nucms_web_blog_post_show', {'slug': post.slug}) %}
             <div class="col-sm-3">
                 <div class="card" style="width: 18rem;">
-                    {% if post.image %}
-                        <a href="{{ path('nucms_web_blog_post_show', {'slug': post.slug}) }}">
+                    <a href="{{ link }}">
+                        {% if post.image %}
                             <img class="card-img-top" src="{{ post.image.path|imagine_filter('md') }}" alt="{{ post.image.title }}">
-                        </a>
-                    {% endif %}
+                        {% else %}
+                            <img class="card-img-top" src="https://via.placeholder.com/286">
+                        {% endif %}
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title">{{ post.title }}</h5>
                         <p class="card-text">{{ post.shortDescription|raw }}</p>
-                        <a href="{{ path('nucms_web_blog_post_show', {'slug': post.slug}) }}"
+                        <a href="{{ link }}"
                            class="btn btn-primary">{{ 'nucms.ui.read_more'|trans }}</a>
                     </div>
                 </div>
