--- a/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/Partial/_taxons.html.twig
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/views/Web/Blog/Partial/_taxons.html.twig
@@ -4,7 +4,7 @@
         {% set link = path('nucms_web_blog_posts_by_taxon', {'slug': taxon.slug}) %}
         <div class="card mb-3" style="width: 18rem;">
             <a href="{{ link }}">
-                {% if taxon.image %}
+                {% if taxon.image %}nucms_web_blog_taxons
                     <img class="card-img-top" src="{{ taxon.image.path|imagine_filter('md') }}"
                          alt="{{ taxon.image.title }}">
                 {% else %}
